[tool.poetry]
name = "deforumed-walk"
version = "0.1.0"
description = "Take a walk in generated world."
authors = ["IzumiSatoshi <izumisatoshi05@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "deforumed_walk"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
torch = {url="https://download.pytorch.org/whl/cu117/torch-1.13.0%2Bcu117-cp310-cp310-win_amd64.whl"}
torchvision = {url="https://download.pytorch.org/whl/cu117/torchvision-0.14.0%2Bcu117-cp310-cp310-win_amd64.whl"}
opencv-python = "^4.7.0.68"
timm = "^0.6.12"
einops = "^0.6.0"
numpngw = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
