[tool.poetry]
name = "deforumed-walk"
version = "0.1.0"
description = "Take a walk in generated world."
authors = ["IzumiSatoshi <izumisatoshi05@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
torch = {url="https://download.pytorch.org/whl/cu117/torch-1.13.0%2Bcu117-cp310-cp310-win_amd64.whl"}
torchvision = {url="https://download.pytorch.org/whl/cu117/torchvision-0.14.0%2Bcu117-cp310-cp310-win_amd64.whl"}
opencv-python = "^4.7.0.68"
timm = "^0.6.12"
einops = "^0.6.0"
numpngw = "^0.1.2"
matplotlib = "^3.6.3"
py3d = "^0.0.70"
sympy = "^1.11.1"
pygame = "^2.1.2"
diffusers = "^0.11.1"
accelerate = "^0.15.0"
transformers = "^4.25.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
